r64 - june
    * lib/test : new folder storing classes which are useful when testing
    * lib/test/sfGuardTestFunctional.class.php : new class overriding the basic
      sfTestFunctional class
    * associationActionsTest.php : tests have been implemented
    * membreActionsTest.php : first tests have been implemented
    * Membre : actions > ACL > test if we the user to edit belongs to the
      current user's association
    * Membre : security.yml > new 'acl' credential is required to access to
      'acl' action


r63 - june, 2, 2009
    * Membre : actions > executeAcl() has been cleaned
    * Membre : showSuccess.php > Domtab is also used to display user information
      in several tabs


r62 - june, 2, 2009
    * settings.yml : secure_module and secure_action have been customized to
      redirect user to a custom page if he doesn't have required credentials
    * Membre : action > processForm > we give all the credentials to the first
      user
    * web/js/domtab/domtab.js : new file, Domtab library to generate HTML tabs
    * web/css/domtab.css : associated stylesheet
    * Membre : actions > edit action directly embeds AclForm
    

r61 - june, 2, 2009
    * AclCredentialPeer : doSelectForMembreId() method
    * Membre.php : resetAcl() method and addCredential($code) method
    * AclCredentialPeer : doDeleteForMembreId() method
    * schema.yml : acl_credential got a new "acl_action_id" field
    * symfony propel:build-model
    * Membre : new template aclError.php which is displayed if no Member is
      specified for edit
    * AclActionPeer : retrieveByCode($code) method
    * AclCredential : getCode() method
    * AclCredentialForm.class.php : new automaticCheck() method
    * no_mail.png image
    * Membre : index > icon 'no_mail' is displayed without link if user has no
      email address
    * security.yml files have been added in each module
    * myUser.class.php : setCredentials() method
    

r60 - june, 1, 2009